--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .Box{
   text-align: center;
-  padding: 5%;
+  padding: 3%;
   margin: 0px 450px 0px 450px;
   border-radius: 5px;
   border-style: solid;
@@ -21,7 +21,7 @@
 
 .Heads{
   color: black;
-  font-size: 80px;
+  font-size: 60px;
   margin: 0px 0px 60px 0px;
 }
 
@@ -35,6 +35,7 @@
   padding: 10px;
   margin-top: 0px;
   margin: 20px;
+  margin-bottom: 0px;
   border-radius: 5px;
   border-style: solid;
   border-width: 2px;
@@ -44,12 +45,39 @@ input[type=submit]{
   color: white;
   background-color: black;
   margin: 20px;
+  margin-bottom: 40px;
 }
 
-.Select:hover{
+.Select:hover, .Smbtn:hover{
   cursor: pointer;
 }
 
-.Butn{
-  width: 100px;
+.Smbtn{
+  display: inline-block;
+  width: 150px;
+  margin: 20px;
+  margin-top: 0px;
+  background-color: #f0f0f0;
+}
+
+.Passbox{
+  width: 300px;
+  padding: 12px;
+  margin-top: 0px;
+  margin: 20px;
+  margin-bottom: 0px;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 2px;
+  font-size: 16px;
+}
+
+.ReactPasswordStrength-strength-bar{
+  margin: 1px 25px 10px 45px;
+  width: calc(100%);
+  max-width: 293px;
+}
+
+.ReactPasswordStrength-strength-desc{
+  font-size: 0px;
 }
