--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,10 @@ input[type=submit]{
   width: 30px;
   margin-left: 20px;
 }
+
+.Navbut{
+  border-width: 0px;
+  border-bottom-width: 2px;
+  padding: 10px;
+  width: 40px;
+}
