--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .Box{
   text-align: center;
   padding: 3%;
-  margin: 0px 450px 0px 450px;
+  margin: 0px 30% 0px 30%;
   border-radius: 5px;
   border-style: solid;
   border-width: 2px;
