--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .Container{
-  padding: 5%;
+  padding: 2%;
+  padding-bottom: 10%;
+  background-image: url('./Components/background.jpg');
 }
 
 .Box{
@@ -7,7 +9,7 @@
   padding: 3%;
   margin: 0px 30% 0px 30%;
   border-radius: 5px;
-  border-style: solid;
+  border-style: ;
   border-width: 2px;
 }
 
@@ -27,15 +29,15 @@
 
 .Subheads{
   display: block;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .InputBoxes{
   width: 300px;
   padding: 10px;
-  margin: 20px;
+  margin: 10px;
   margin-bottom: 0px;
-  border-radius: 5px;
+  border-radius: 50px;
   border-style: solid;
   border-width: 2px;
 }
@@ -63,7 +65,7 @@ input[type=submit]{
   padding: 12px;
   margin: 20px;
   margin-bottom: 0px;
-  border-radius: 5px;
+  border-radius: 50px;
   border-style: solid;
   border-width: 2px;
   font-size: 16px;
@@ -111,6 +113,11 @@ input[type=submit]{
 .User-logo{
   width: 30px;
   margin-left: 20px;
+}
+
+.UserLogoLogin{
+  width: 60px;
+  margin: 20px;
 }
 
 .Navbut{
