--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .Container{
   padding: 2%;
   padding-bottom: 10%;
+  background-image: url('./Components/Background.jpg');
 }
 
 .Box{
@@ -8,7 +9,6 @@
   padding: 3%;
   margin: 0px 30% 0px 30%;
   border-radius: 5px;
-  border-style: ;
   border-width: 2px;
 }
 
@@ -109,12 +109,12 @@ input[type=submit]{
   margin-left: 5%;
 }
 
-.User-logo{
+.Userlogo{
   width: 30px;
   margin-left: 20px;
 }
 
-.UserLogoLogin{
+.Userloginlogo{
   width: 60px;
   margin: 20px;
 }
