--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,12 @@ input[type=submit]{
   font-size: 0px;
 }
 
+.ReactPasswordStrength-input{
+  border: 'solid';
+  font-size: 15px;
+  width: 300px;
+}
+
 .Container2{
   padding: 1%;
 }
