--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .Container{
   padding: 2%;
   padding-bottom: 10%;
-  background-image: url('./Components/Background.jpg');
 }
 
 .Box{
@@ -39,6 +38,7 @@
   border-radius: 50px;
   border-style: solid;
   border-width: 2px;
+  border-color: black;
 }
 
 input[type=submit]{
