--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .Container{
   padding: 2%;
-  padding-bottom: 10%;
+  padding-bottom: 5%;
 }
 
 .Box{
@@ -48,8 +48,9 @@ input[type=submit]{
   margin-bottom: 40px;
 }
 
-.Select:hover, .Smbtn:hover, .Topbar:hover{
+.Select:hover, .Smbtn:hover, .Topbar:hover, .Navbut:hover{
   cursor: pointer;
+  color: #999999;
 }
 
 .Smbtn{
@@ -102,6 +103,7 @@ input[type=submit]{
 
 .Container2{
   padding: 1%;
+  padding-bottom: 1.5%;
 }
 
 .Topbar{
@@ -124,4 +126,5 @@ input[type=submit]{
   border-bottom-width: 2px;
   padding: 10px;
   width: 40px;
+  color: white;
 }
