--- a/src/App.css
+++ b/src/App.css
@@ -55,8 +55,8 @@ input[type=submit]{
 
 .Smbtn{
   display: inline-block;
-  width: 150px;
-  margin: 20px;
+  width: 45%;
+  margin: 0%;
   margin-top: 0px;
 }
 
