--- a/src/Components/lms.css
+++ b/src/Components/lms.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,11 +8,70 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.active{
-  color: orange;
+.navbarLinks{
+  color: grey;
 }
 
+.active{
+  color: rgb(255, 255, 255);
+}
+
+.formHeaderspl{
+  color: darkblue;
+  line-height: 40px;
+}
+
+.leftAllignFormHeader{
+  text-align: center; 
+  line-height: 80px;
+}
+
+.formHeader{
+  color: darkblue;
+}
+
+.Form{
+  color: grey;
+}
+
+.FormDiv{
+  text-align: center;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.ACT{
+  color: blue;
+}
+
+.fadeIN{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  width: 400px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -100px;
+    margin-left: -200px;
+}
+
+#Pending {
+  background: rgba(255,255,0,0.15);
+}
+
+#Declined {
+  background: rgba(255,0,0,0.15);
+}
+
+#Approved {
+  background: rgba(0,255,0,0.15);
+}
+
+#tableallign
+{
+  padding-bottom: 40px;
 }
