--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,12 @@
 
 .Box{
   text-align: center;
-  padding: 3%;
-  margin: 0px 30% 0px 30%;
-  border-radius: 5px;
+  padding: 2%;
+  padding-left: 0%;
+  margin: 1% 10% 0% 49%;
+  border-radius: 0px;
   border-width: 2px;
+  border-left-style: solid;
 }
 
 .Content{
@@ -127,4 +129,15 @@ input[type=submit]{
   padding: 10px;
   width: 40px;
   color: white;
+}
+
+.Univlogo{
+  width: 70%;
+  margin: 5%;
+  padding-top: 10%;
+  padding-left: 25%;
+}
+
+.Logo{
+  height: 0px;
 }
