--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,10 @@
 
 .Box{
   text-align: center;
-  padding: 2%;
-  padding-left: 0%;
-  margin: 1% 10% 0% 49%;
-  border-radius: 0px;
+  padding: 3%;
+  margin: 0px 30% 0px 30%;
+  border-radius: 5px;
   border-width: 2px;
-  border-left-style: solid;
 }
 
 .Content{
@@ -23,7 +21,7 @@
 
 .Heads{
   color: black;
-  font-size: 60px;
+  font-size: 30px;
   margin: 0px 0px 60px 0px;
 }
 
@@ -119,7 +117,7 @@ input[type=submit]{
 }
 
 .Userloginlogo{
-  width: 60px;
+  width: 300px;
   margin: 20px;
 }
 
@@ -129,15 +127,4 @@ input[type=submit]{
   padding: 10px;
   width: 40px;
   color: white;
-}
-
-.Univlogo{
-  width: 70%;
-  margin: 5%;
-  padding-top: 10%;
-  padding-left: 25%;
-}
-
-.Logo{
-  height: 0px;
 }
