--- a/src/Components/lms.css
+++ b/src/Components/lms.css
@@ -9,7 +9,8 @@ body {
 }
 
 .navbarLinks{
-  color: grey;
+  color: black;
+  font-size: 20px;
 }
 
 .active{
@@ -17,7 +18,7 @@ body {
 }
 
 .formHeaderspl{
-  color: darkblue;
+  color: black;
   line-height: 40px;
 }
 
@@ -27,11 +28,11 @@ body {
 }
 
 .formHeader{
-  color: darkblue;
+  color: black;
 }
 
 .Form{
-  color: grey;
+  color: black;
 }
 
 .FormDiv{
